# amiwm

./: .gitignore  Amilogo.bm  Amilogo.pm  Background_resize  Background_stretch  Imakefile  LICENSE.md  MODULES.md  Makefile  Makefile.in  README  README.md  README.modules  Xinitrc  Xinitrc.in  Xresources.amiwm.in  Xsession  Xsession.in  Xsession2  Xsession2.in  alloc.h  amiwm-init  amiwm.1  client.c  client.h  config_util.c  configure  configure.ac  def_disk.info  def_drawer.info  def_project.info  def_tool.info  diskobject.c  executecmd.c  frame.c  gnome.c  gram.c  gram.h  gram.y  icc.c  (+34 more)
libami/: Makefile  Makefile.in  broker.c  drawinfo.c  drawinfo.h  error.c  eventdispatcher.c  hotkey.c  iconlib.c  iconutil.c  iffparse.c  kbdsupport.c  libami.h  lists.c  mdicon.c  mdscreen.c  mdwindow.c  module.c  readargs.c  strutil.c
